# gh-heat

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  release.sh
.github/workflows/: aur-release.yml  release.yml
src/: error.rs  github.rs  heatmap.rs  main.rs
