[package]
name = "gh-heat"
version = "0.1.0"
edition = "2021"
authors = ["ahacad <ahacadev@gmail.com>"]
description = "A terminal heatmap generator for GitHub user contributions"
repository = "https://github.com/ahacad/gh-heat"
license = "MIT"
keywords = ["github", "heatmap", "cli", "terminal", "contributions"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
tokio = { version = "1.28", features = ["full"] }
regex = "1.10"
rand = "0.8"
