[package]
name = "gh-heat"
version = "0.0.1"
edition = "2021"
authors = ["ahacad <ahacadev@gmail.com>"]
description = "A terminal heatmap generator for GitHub user contributions"
repository = "https://github.com/ahacad/gh-heat"
license = "MIT"
keywords = ["github", "heatmap", "cli", "terminal", "contributions"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
tokio = { version = "1.28", features = ["full"] }
regex = "1.10"
rand = "0.8"

[package.metadata.release]
pre-release-commit-message = "release: v{{version}}"
tag-message = "Release v{{version}}"
tag-name = "v{{version}}"
sign-commit = true
sign-tag = true
push = true
publish = false
pre-release-replacements = [
  {file="README.md", search="gh-heat [0-9]+\\.[0-9]+\\.[0-9]+", replace="gh-heat {{version}}"},
  {file="PKGBUILD", search="pkgver=.*", replace="pkgver={{version}}"}
]
